# snakes_n_ladders

./: Cargo.toml  README.md
src/: cube.rs  main.rs  octo.rs  shuffle.rs  simplex.rs  snl.rs  stats.rs  util.rs
