[package]
name = "snakes_n_ladders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
itertools = "0.13.0"
rand="0.8.5"
rayon = "1.10.0"
thiserror = "2.0.10"
